force-app/main/default/objects/sugati__Airport__c/sugati__Airport__c.object-meta.xml
<CustomObject>
    <description>A list of Airports.</description>
    <label>Airport &amp; Station</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports &amp; Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>