force-app/main/default/objects/sugati__Airport__c/fields/sugati__AIR_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__AIR_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipName>Airports</relationshipName>
    <type>Lookup</type>
</CustomField>