force-app/main/default/objects/sugati__Airport__c/fields/sugati__AIR_IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__AIR_IATA_Code__c</fullName>
    <inlineHelpText>An IATA airport code, also known as an IATA location identifier, IATA station code, or simply a location identifier, is a three-letter geocode designating many airports and metropolitan areas around the world, defined by the International Air Transport Association (IATA).</inlineHelpText>
    <label>IATA Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>