force-app/main/default/objects/sugati__Airport__c/fields/sugati__S_AIR_City__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AIR_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>