force-app/main/default/objects/sugati__Airport__c/fields/sugati__S_AIR_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AIR_Country_Name__c</fullName>
    <formula>sugati__AIR_Country__r.Name</formula>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>