force-app/main/default/objects/sugati__Airport__c/fields/sugati__S_AIR_Street__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AIR_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>