force-app/main/default/objects/sugati__Airport__c/fields/sugati__S_AIR_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AIR_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Airports &amp; Stations</relationshipLabel>
    <relationshipName>Airports_Stations</relationshipName>
    <type>Lookup</type>
</CustomField>