force-app/main/default/objects/sugati__Airport__c/recordTypes/sugati__Airport.recordType-meta.xml
<RecordType>
    <fullName>sugati__Airport</fullName>
    <active>true</active>
    <label>Airport</label>
</RecordType>