force-app/main/default/objects/sugati__Airport__c/recordTypes/sugati__Railway_Station.recordType-meta.xml
<RecordType>
    <fullName>sugati__Railway_Station</fullName>
    <active>true</active>
    <label>Railway Station</label>
</RecordType>